tests/error_messages/error_messages.exp
Error --------------------------------------------------------------------------------------------------- errors.js:1:12

Cannot resolve name `define`.

   1| if (typeof define === 'function' && define.amd) { }
                 ^^^^^^


Error ------------------------------------------------------------------------------------------- long_string_use.js:6:2

Cannot cast `long_lit` to string literal `aaaaaaaaaaaaaaaaaaaaa` because string [1] is incompatible with string literal
`aaaaaaaaaaaaaaaaaaaaa` [2] because strings longer than `20` characters are not treated as literals.

   long_string_use.js:6:2
   6| (long_lit: 'aaaaaaaaaaaaaaaaaaaaa'); // error
       ^^^^^^^^

References:
   long_string_lit.js:4:18
   4| const long_lit = 'aaaaaaaaaaaaaaaaaaaaa'
                       ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   long_string_use.js:6:12
   6| (long_lit: 'aaaaaaaaaaaaaaaaaaaaa'); // error
                 ^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 2 errors
